@@ -1,0 +1,6 @@
+Feature https://rspec.lighthouseapp.com/projects/16211/tickets/301
+  Background: A background
+    Given whatever
+    
+  Scenario: VB is not cool
+    Then VB should not be cool
