@@ -4,11 +4,13 @@ module Cucumber
   module Ast
     class Background
       include FeatureElement
+      attr_reader :feature_elements
 
       def initialize(comment, line, keyword, name, steps)
         @comment, @line, @keyword, @name, @steps = comment, line, keyword, name, StepCollection.new(steps)
         attach_steps(steps)
         @step_invocations = @steps.step_invocations(true)
+        @feature_elements = []
       end
 
       def step_collection(step_invocations)
@@ -23,23 +25,22 @@ module Cucumber
       def accept(visitor)
         visitor.visit_comment(@comment)
         visitor.visit_background_name(@keyword, @name, file_colon_line(@line), source_indent(first_line_length))
-        visitor.step_mother.before(self)
+        visitor.step_mother.before(hook_context)
         visitor.visit_steps(@step_invocations)
         @failed = @step_invocations.detect{|step_invocation| step_invocation.exception}
-        visitor.step_mother.after(self) if @failed
+        visitor.step_mother.after(hook_context) if @failed
       end
 
       def accept_hook?(hook)
-        # TODO: When background is involved - no tag based hook filtering is occurring with
-        # the current implementation. All hooks will be executed. This is because of the line
-        #   visitor.step_mother.before(self)
-        # in the #accept method above. Instead, we should really be passing the first scenario
-        # here. We currently don't have access to that, so a refactoring is in order to make that happen.
-        true
+        false
       end
 
       def failed?
         @failed
+      end
+
+      def hook_context
+        @feature_elements.first || self
       end
 
       def to_sexp
